# data-structures

./: .gitignore  README.md  demo.rb
assignment/: CMakeLists.txt  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  main.cpp  todo.md
assignment/data/: dictionary.txt  randomwords1000.txt  randomwords3000plus.txt  testFile.txt
assignment/test/: RandomWords1000.csv  randomwords100.txt  randomwords3000plus.txt
linked-list/: main.cpp
practical-01/: pointerDemo.cpp  pointerDemo2.cpp  printInteger.cpp  week01.cpp
practical-01/Employee/: Employee.cpp  Employee.h  callYearlySalary.cpp
practical-02/: List.cpp  List.h  Person.cpp  Person.h  main.cpp
practical-03/: List.cpp  List.h  ListApp.cpp  main.cpp
practical-04/: CMakeLists.txt  Stack.cpp  Stack.h  StackDemo.cpp
practical-05/: CMakeLists.txt  Queue.cpp  Queue.h  Queue_Circle.cpp  Stack.h  main.cpp
practical-06/: CMakeLists.txt  main.cpp  tutorial.cpp
practical-07/: CMakeLists.txt  main.cpp
practical-08/: BST.cpp  BST.h  BSTDemo  BSTDemo.cpp  BinaryNode.cpp  BinaryNode.h  CMakeLists.txt  main.cpp
practical-12/: main.cpp  product1.txt  product2.txt  transaction1.txt  transaction2.txt
